--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -76,5 +76,5 @@
 %
 %\newtheorem*{proof*}{Proof}
 %\newtheorem{proposition}{Proposition}
-%\newtheorem*{sketch*}{Proof Sketch}
+%\newtheorem{sketch}[proof]{Proof Sketch}
 %\newtheorem*{example*}{Example}
