--- a/minimax.tex
+++ b/minimax.tex
@@ -74,10 +74,8 @@ Social choice deals with the problem of determining a consensus choice from the 
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
 In many situations, such as in group recommender systems, the goal is to find a consensus choice;
 social choice theory can provide foundations for such applications.
-
 %The traditional approach to social choice assumes that both the social choice function and the full preference orderings of the agents (voters) are expressed beforehand. These represent two strong hypothesis.
-The traditional approach to social choice assumes that 1) the full preference orderings of the agents and 2) the social choice function are expressed beforehand. These represent two strong hypothesis.
-
+The traditional approach to social choice assumes that 1) the full preference orderings of the agents and 2) the social choice function are expressed beforehand. These represent two strong hypotheses.
 Requiring agents to express full preference orderings can be prohibitively costly (in terms of cognitive and communication cost).
 This observation has motivated several works assuming partial preference orders: 
 %and incremental elicitation of agent preferences. 
@@ -119,13 +117,13 @@ Actually, very few works altogether have considered the problem of eliciting a v
 Additionally, some works address the manipulability of voting rules \cite{Elkind2012,Dey2018,Dey2018_2,Conitzer2011,Baumeister2019} and 
 strategic behaviors \cite{Endriss2016,Lev2019,Annemieke2012}.
 
-Our approach is evaluated on simulations with synthetic and real datasets where both the voting rule and the agent preferences are initially unknown to the system and incrementally revealed through questioning. We assume the chair to be human, thus able to answer questions about a limited number of alternatives, so we focus on small scale social choice situations. We compare the effectiveness of several questioning strategies based on the current knowledge of the rule and preferences. To summarize our contributions: 1) we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile; 2) we show that with our elicitation method it is possible to reach low regret with a reasonable number of questions; 3) we present elicitation strategies that achieve good results within reasonable computation time; 4) we show that for the class of rule considered, asking a few questions to the chair suffice to reach low regret; 5) our experiments suggest that low degree of similarity among preferences (as in impartial culture) is a more challenging setting than less varied profiles.
+Our approach is evaluated on simulations with synthetic and real datasets where both the voting rule and the agent preferences are initially unknown to the system and incrementally revealed through questioning. We assume the chair to be human, thus able to answer questions about a limited number of alternatives, so we focus on small scale social choice situations. We compare the effectiveness of several questioning strategies based on the current knowledge of the rule and preferences. To summarize our contributions: 1) we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile; 2) we show that with our elicitation method it is possible to reach low regret with a reasonable number of questions; 3) we present elicitation strategies that achieve good results within reasonable computation time; 4) we show that for the class of rules considered, asking a few questions to the chair suffice to reach low regret; 5) our experiments suggest that low degree of similarity among preferences (as in impartial culture) is a more challenging setting than less varied profiles.
 %\begin{itemize}
 %	\item we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile;  
 %	\item we showed that with our elicitation method %in small problem sizes, %starting with zero knowledge,
 %	it is possible to reach low regret with a reasonable number of questions;
 %	\item the elicitation strategies that we provide, in particular Pessimistic, achieve good results within reasonable computation time; %for small problem sizes;
-%	\item we showed that for the class of rule considered, asking a few questions to the chair suffice to reach low regret;
+%	\item we showed that for the class of rules considered, asking a few questions to the chair suffice to reach low regret;
 %	\item our experiments suggest that low degree of similarity among preferences %rankings 
 %	(as in impartial culture) is a more challenging setting than less varied profiles.
 %\end{itemize}
@@ -213,7 +211,7 @@ Recall that, in the computation of $s(x; \profile, \w)$, $w_{v_j(x)}$ represents
 Since scoring rules are additively decomposable, we can consider separately the contribution of each agent to the total score. Thus, we can write the actual regret of choosing $x$ instead of $y$ as $s(y; \profile,\w) - s(x; \profile, \w) = \sum_{j=1}^n w_{v_j(y)} - w_{v_j(x)}$, and we obtain \[\PMR(x,y; \pprofile, W) =  \max_{\w \in W} \sum_{j=1}^{n} \max_{v_j \in C(\succ_j^p)} [w_{v_j(y)} - w_{v_j(x)}].\]
 %Note that in general the inner max depends on the weights chosen by the outer max.
 
-The following propositions (with proofs in Appendix) show that the procedure for completing a partial profile,  proposed by Lu and Boutilier \cite{Lu2011} when considering a fixed weight vector, also applies in our setting. We write $a \pprefeq_j b$ iff $a \ppref_j b \lor a = b$ and adopt the canonical notation when considering a relation as a function, writing ${\pprefeq_j}(x)$ for $\set{y \suchthat x \pprefeq_j y}$.
+The following propositions show that the procedure for completing a partial profile,  proposed by Lu and Boutilier \cite{Lu2011} when considering a fixed weight vector, also applies in our setting. We write $a \pprefeq_j b$ iff $a \ppref_j b \lor a = b$ and adopt the canonical notation when considering a relation as a function, writing ${\pprefeq_j}(x)$ for $\set{y \suchthat x \pprefeq_j y}$.
 
 
 \begin{proposition} \label{claim:completion}
@@ -235,11 +233,42 @@ The following propositions (with proofs in Appendix) show that the procedure for
 	%	\end{align} 
 \end{proposition}
 
+\begin{proof}[Proof Sketch]
+	Consider our knowledge $\pprefeq_j$ about the preference of the agent $j$. 
+	The adversary's goal is to make the score of $y$ as high as possible and the score of $x$ as low as possible. 
+	To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worse than $x$ (those $a$ such that $x \pprefeq_j a$); and similarly, he should put below $y$ all the alternatives he can. Two conditions must be excluded for $a$ to go below $y$. The alternatives such that $a \pprefeq_j y$ can’t be put below $y$.
+	Furthermore, the first objective must take priority over the second one: when an alternative should go above $x$ according to the first objective (because $¬(x \pprefeq_j a)$), and $x$ is known to be better than $y$ (thus $x \pprefeq_j y$), then $a$ should be put above $x$ (irrespective of whether $a \pprefeq_j y$), which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. 
+	This maximizes the adversary’s interests: because the weight vector is convex, the difference of scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of scores is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
+\end{proof}
+
+
 \begin{proposition} \label{claim:rankPMR}
 	\begin{sloppypar}
 	The rank of $x$ in the PMR-maximizing linear orders of agent $j$ is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\card{\beta}$, where $\card{\beta} = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ if $(x \pprefeq_j y)$ and $\card{\beta} = 0$ otherwise.
 	\end{sloppypar}
 \end{proposition}
+
+\begin{proof}[Proof]
+	The rank of $x$ is directly obtained from Eq.(\ref{eq:complx}). The rank of $y$ is obtained by complementing Eq.(\ref{eq:comply}), obtaining $a \prefeq_j y ⇔ (a \pprefeq_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))$, and, observing that $a \pref_j y ⇔ a ≠ y ∧ a \prefeq_j y$, obtaining that $a \pref_j y$ if and only if
+	\begin{equation}
+		\label{eq:betteryinter}
+		(a \neq y) ∧ [(a \pprefeq_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))],
+	\end{equation} 
+	or equivalently, if and only if
+	\begin{equation}
+		\label{eq:bettery}
+		%a \pref_j y ⇔ 
+		(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a)).
+	\end{equation} 
+	Indeed, \eqref{eq:betteryinter} $⇒$ \eqref{eq:bettery}, and \eqref{eq:bettery} $⇒$ \eqref{eq:betteryinter} because $(x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) ⇒ a ≠ y$ (as when $a = y$, $(x \pprefeq_j y)$ and $¬(x \pprefeq_j a)$ are opposite claims). Suffices now to rewrite \cref{eq:bettery} to let the two disjuncts designate disjoint sets:
+	\begin{equation}
+		\label{eq:betteryfinal}
+		a \pref_j y ⇔ 
+		(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) ∧ ¬(a \ppref_j y)).
+	\end{equation}
+\end{proof}
+
+
 Note that in \cref{claim:rankPMR}, in the case $(x \pprefeq_j y)$, $\beta$ is the number of alternatives incomparable with both $x$ and $y$.
 \begin{proposition}\label{claim:PMR}
 	The $\PMR$ can be written as:
@@ -299,6 +328,21 @@ Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a
 \begin{proposition}\label{prop:chairQuestions}
 	Given a rational $\lambda = p/q > 1$ and a rank $r$ between $1$ and $m - 2$, there exists a profile $P$ such that, for any weight vector $\w \in \W$, $a \in f(P)$ iff $w_{r} - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$ and $b \in f(P)$ iff $w_{r} - w_{r+1} ≤ \lambda (w_{r+1} - w_{r+2})$, where $f$ is the PSR parameterized with $\w$.
 \end{proposition}
+
+\begin{proof}[Proof]
+	\label{proof:chairQuestions}
+	Define a linear order $>_1$ over $A$ as placing $a$ at rank $r$, $b$ at rank $r + 1$, and the remaining alternatives arbitrarily. 
+	Define a linear order $>_2$ over $A$ as placing $a$ at rank $r + 2$, $b$ at rank $r + 1$, and the remaining alternatives arbitrarily.
+	Define an arbitrary linear ordering $>$ over $A \setminus \set{a, b}$. 
+	Define a linear order $>_3$ as placing $a$ first, $b$ second, and following the order of $>$ for the remaining positions.
+	Finally, define a linear order $>_4$ as placing $b$ first, $a$ second, and following the \emph{inverse} order of $>$ for the remaining positions.
+	
+	Define $P$ as the profile of $3 (p + q)$ agents containing $q$ times $>_1$, $p$ times $>_2$, and $>_3$ and $>_4$ each $p + q$ times.
+	As a result, $a$ obtains the following ranks: $q$ times $r$, $p$ times $r + 2$, $p + q$ times first, and $p + q$ times second. The alternative $b$ obtains the ranks $r + 1$, $2$ and $1$, each $p + q$ times. Consider any alternative $c \in A \setminus \set{a, b}$. Its score is maximal when it comes first in $>_1$, first in $>_2$ and first in $>$, by convexity of the weights. In that case, $c$ is positioned at the ranks $1$, $3$ and $m$, each $p + q$ times. 
+	
+	Letting $s(x)$ denote the score of $x$ at $P$, we obtain $s(a) = q w_r + p w_{r + 2} + (p + q) w_1 + (p + q) w_2$, thus, $s(a) ≥ (p + q) w_m + (p + q) w_1 + (p + q) w_2$; $s(b) = (p + q) w_{r + 1} + (p + q) w_2 + (p + q) w_1$; and, $\forall c \in A \setminus \set{a, b}$, 
+	$s(c) ≤ (p + q) w_1 + (p + q) w_3 + (p + q) w_m$. It follows that $a$ or $b$ maximize $s$ (as $s(a) ≥ s(c)$). We conclude by observing that $a \in f(P) ⇔ s(a) ≥ s(b) ⇔ q w_r + p w_{r + 2} ≥ (p + q) w_{r + 1} ⇔ w_r - w_{r + 1} ≥ (p / q) (w_{r + 1} - w_{r + 2})$, and similarly for $b \in f(P)$.
+\end{proof}
 
 \begin{example}
 	Suppose we want to ask the following question to the chair: $w_{2} - w_{3} ≥ 2 (w_{3} - w_{4})$. 
@@ -568,6 +612,74 @@ Another interesting measure is the average number of questions asked to each par
 	\end{tikzpicture}
 \end{figure}
 
+\begin{figure}
+	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different datasets. (20 runs)}
+	\label{fig:linearity2}
+	\begin{tikzpicture}
+		\pgfplotsset{
+			every axis legend/.append style={
+				at={(0.5,1.1)},
+				anchor=south
+			},
+		}
+		\begin{axis}[
+			y=80,
+			legend columns=3,
+			xlabel=Number of Questions,
+			ylabel=MMR/n,
+			ytick={0,0.5,1},
+			xtick distance=100,
+			xtick pos=left,
+			ymajorgrids=true,
+			ytick style={draw=none},
+			ymin=0,
+			ymax=1,
+			xmin=0,
+			xmax=1000,
+			yticklabels={0,0.5,1},
+			legend style={font=\footnotesize}]
+			
+			
+			%			\addlegendimage{mark=*,violet,mark size=2}
+			\addlegendimage{mark=halfsquare right*,brown,mark size=2}
+			\addlegendimage{mark=diamond*,red,mark size=2}
+			\addlegendimage{mark=pentagon*,cyan,mark size=2}
+			\addlegendimage{mark=halfcircle*,violet,mark size=2}
+			\addlegendimage{mark=*,pink,mark size=2}
+			\addlegendimage{mark=triangle*,green,mark size=2}
+			\addlegendimage{mark=halfsquare left*,blue,mark size=2}
+			\addlegendimage{mark=square*,teal,mark size=2}
+			\addlegendimage{mark=halfsquare*,magenta,mark size=2}
+			
+			
+			%			\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {35}, teal] table [x=k, y=5.10]{data/normalizedLin.dat};
+			%			\addlegendentry{m=5, n=10}
+			%			\addplot[thick, mark=*, mark size = {2}, mark indices = {45}, violet] table [x=k, y=5.15]{data/normalizedLin.dat};
+			%			\addlegendentry{m=5, n=15}
+			\addplot[thick, mark=halfsquare right*, mark size = {2}, mark indices = {120}, brown] table [x=k, y=5.20]{data/linearity_redone.dat};
+			\addlegendentry{m=5, n=20}
+			\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {150}, red] table [x=k, y=10.20]{data/linearity_redone.dat};
+			\addlegendentry{m=10, n=20}
+			%			\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {300}, cyan] table [x=k, y=10.30]{data/normalizedLin.dat};
+			%			\addlegendentry{m=10, n=30}
+			\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {240}, cyan] table [x=k, y=11.30]{data/linearity_redone.dat};
+			\addlegendentry{m=11, n=30}
+			\addplot[thick, mark=halfcircle*, mark size = {2}, mark indices = {400}, violet] table [x=k, y=tshirts]{data/linearity_redone.dat};
+			\addlegendentry{tshirts m11n30}
+			\addplot[thick, mark=*, mark size = {2}, mark indices = {400}, pink] table [x=k, y=courses]{data/linearity_redone.dat};
+			\addlegendentry{courses m9n146}
+			\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {400}, green] table [x=k, y=9.146]{data/linearity_redone.dat};
+			\addlegendentry{m=9, n=146}
+			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/linearity_redone.dat};
+			\addlegendentry{m=14, n=9}
+			\addplot[thick, mark=square*, mark size = {2}, mark indices = {60}, teal] table [x=k, y=skate]{data/linearity_redone.dat};
+			\addlegendentry{skate m14n9}
+			\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, magenta] table [x=k, y=15.30]{data/linearity_redone.dat};
+			\addlegendentry{m=15, n=30}
+		\end{axis}
+	\end{tikzpicture}
+\end{figure}
+
 \begin{table}[ht]
 	\caption{Average number of questions asked to the chair ($q_{c}$) and to the agents (\textit{$q_{v}$}) by Pessimistic strategy to reach zero regret on the datasets of \cref{fig:linearity}.}
 	\label{tab:Numquestions}
@@ -613,6 +725,28 @@ In the \textit{Skate} problem, the value $\MMR\!=\!1$ is reached after less than
 		%		250 & 8.4 & 1.86 & 	7.69 & 1.24 \\
 		300 &11.07 & 0.86& 11.87 & 1.25 \\
 		%		350 &15.06 & 0.68&15.59 & 0.6 \\
+		400 &20.0 & 0.0 & 20.0 & 0.0 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+\begin{table}
+	\caption{Average MMR in problems of size $(10, 20)$ after $400$ questions, among which $q_c$ to the chair. (20 runs redone with penalty)}
+	\label{tab:twoP4002}
+	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
+		\toprule
+		{$q_c$} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
+		\midrule
+		0 & 0.86 & 0.72 & 0.73 & 0.67 \\
+		15 & 0.92 & 0.82 & 0.93	& 0.96  \\
+		30 & 0.9 & 0.97 & 0.72	& 0.7 \\
+		50 & 1.36 & 1.29 & 1.38	& 1.17 \\
+		100 & 1.9 & 1.72 & 2.5	& 1.46  \\
+		150 & 4.4 & 2.09 & 4.23 & 1.53 \\
+		200 & 6.05	& 1.53  & 6.06 & 1.61 \\
+		250 & 8.27	& 1.54& 8.86 & 1.38 \\
+		300 &11.54	& 1.07& 11.82 &1.25 \\
+		350 &15.39	& 0.61 &15.54	&0.73 \\
 		400 &20.0 & 0.0 & 20.0 & 0.0 \\
 		\bottomrule
 	\end{tabular}
